--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,24 +20,24 @@ jobs:
         distribution: 'adopt'
         cache: 'maven'
 
-    - name: Use Maven 3.9.2
-      run: |
-        MAVEN_VERSION=3.9.2
-        MAVEN_BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
-        curl -fsSL ${MAVEN_BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar -xz -C /tmp
-        echo "M2_HOME=/tmp/apache-maven-${MAVEN_VERSION}" >> $GITHUB_ENV
-        echo "/tmp/apache-maven-${MAVEN_VERSION}/bin" >> $GITHUB_PATH
+#    - name: Use Maven 3.9.2
+#      run: |
+#        MAVEN_VERSION=3.9.2
+#        MAVEN_BASE_URL=https://archive.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
+#        curl -fsSL ${MAVEN_BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar -xz -C /tmp
+#        echo "M2_HOME=/tmp/apache-maven-${MAVEN_VERSION}" >> $GITHUB_ENV
+#        echo "/tmp/apache-maven-${MAVEN_VERSION}/bin" >> $GITHUB_PATH
 
 #     - name: Build with Maven
 #       run: mvn -B clean verify
 
-    - name: Start Jetty
-      run: mvn jetty:run &
-      shell: bash
-
-    - name: Sleep for 30 seconds
-      run: sleep 30s
-
-    - name: Stop Jetty
-      run: pkill -9 -f jetty
-      shell: bash
+#    - name: Start Jetty
+#      run: mvn jetty:run &
+#      shell: bash
+#
+#    - name: Sleep for 30 seconds
+#      run: sleep 30s
+#
+#    - name: Stop Jetty
+#      run: pkill -9 -f jetty
+#      shell: bash
